--- a/index.html
+++ b/index.html
@@ -3,10 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
   <title>WebRTC</title>
 </head>
 
 <body>
+  <div id="app">
+    <nav class="navbar navbar-light bg-light">
+      <span class="navbar-brand mb-0 h1">WebRTC</span>
+    </nav>
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col-sm-6">
+          <h2>Envoi</h2>
+          <video id="emitter-video" playsinline width="100%" height="400px"></video>
+          <p>
+            <button id="start" class="btn btn-primary btn-sm">Démarrer la vidéo et afficher offre ci-dessous</button>
+          </p>
+          <textarea id="offer" cols="30" rows="10" class="form-control"></textarea>
+        </div>
+
+        <div class="col-sm-6">
+          <h2>Réception</h2>
+          <video id="receiver-video" playsinline width="100%" height="400px" controls></video>
+
+          <form id="incoming">
+            <div class="form-group">
+              <textarea class="form-control" cols="30" rows="10"></textarea>
+            </div>
+            <p>
+              <button type="submit">Enregistrer offre/réponse</button>
+            </p>
+          </form>
+
+        </div>
+      </div>
+
+      <script src="simplePeer.js"></script>
+      <script src="app.js"></script>
 
 </body>
 
