--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="col-sm-6">
           <h2>Envoi</h2>
-          <video id="emitter-video" playsinline width="100%" height="400px"></video>
+          <video id="emitter-video" autoplay playsinline width="100%" height="400px"></video>
           <p>
             <button id="start" class="btn btn-primary btn-sm">Démarrer la vidéo et afficher offre ci-dessous</button>
           </p>
@@ -28,7 +28,11 @@
 
         <div class="col-sm-6">
           <h2>Réception</h2>
-          <video id="receiver-video" playsinline width="100%" height="400px" controls></video>
+          <video id="receiver-video" autoplay playsinline width="100%" height="400px" controls></video>
+
+          <p>
+            <button id="receiver" class="btn btn-primary btn-sm">Recevoir la vidéo</button>
+          </p>
 
           <form id="incoming">
             <div class="form-group">
@@ -42,8 +46,10 @@
         </div>
       </div>
 
-      <script src="simplePeer.js"></script>
-      <script src="app.js"></script>
+      <script src="vendor/firebase.js"></script>
+      <script src="vendor/simplePeer.js"></script>
+      <script type="module" src="firebase-init.js"></script>
+      <script type="module" src="app.js"></script>
 
 </body>
 
