--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h2>Envoi</h2>
           <video id="emitter-video" autoplay playsinline width="100%" height="400px"></video>
           <p>
-            <button id="start" class="btn btn-primary btn-sm">Démarrer la vidéo et afficher offre ci-dessous</button>
+            <button id="start" class="btn btn-primary btn-sm">Share my video</button>
           </p>
 
         </div>
@@ -30,10 +30,10 @@
           <h2>Réception</h2>
           <video id="receiver-video" autoplay playsinline width="100%" height="400px" controls></video>
 
-          <p>
+          <!--          <p>
             <button id="receiver" class="btn btn-primary btn-sm">Recevoir la vidéo</button>
           </p>
-
+ -->
 
         </div>
       </div>
