--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="col-sm-6">
           <h2>Envoi</h2>
-          <video id="emitter-video" autoplay playsinline width="100%" height="400px"></video>
+          <video id="emitter-video" autoplay playsinline muted width="100%" height="400px"></video>
           <p>
             <button id="start" class="btn btn-primary btn-sm">Share my video</button>
           </p>
