--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body>
   <div id="app">
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light justify-content-between">
       <span class="navbar-brand mb-0 h1">WebRTC</span>
+      <a href="https://github.com/mornir/webrtc-firebase" target="_blank">
+        <img src="github.png" alt="github" width="25px">
+      </a>
     </nav>
 
     <div class="container">
@@ -23,18 +26,11 @@
           <p>
             <button id="start" class="btn btn-primary btn-sm">Share my video</button>
           </p>
-
         </div>
 
         <div class="col-sm-6">
           <h2>Réception</h2>
-          <video id="receiver-video" autoplay playsinline width="100%" height="400px" controls></video>
-
-          <!--          <p>
-            <button id="receiver" class="btn btn-primary btn-sm">Recevoir la vidéo</button>
-          </p>
- -->
-
+          <video id="receiver-video" autoplay playsinline width="100%" height="400px"></video>
         </div>
       </div>
 
